@startuml
title Idea Bank - Kanban Status Workflow

[*] --> New : Idea created

state New {
  New : Initial state when idea is created
  New : Developer can review or start work
}

state Review {
  Review : Idea is being evaluated
  Review : Team discusses feasibility
}

state InProgress {
  InProgress : Implementation in progress
  InProgress : Developer assigned
}

state Completed {
  Completed : Implementation finished
  Completed : Deployed to production
}

state Rejected {
  Rejected : Idea not approved
  Rejected : May have rejection reason
}

New --> Review : Drag to Review column\nPUT /api/items/:id {status: "review"}
Review --> InProgress : Approved for implementation\nPUT /api/items/:id {status: "in-progress"}
Review --> Rejected : Not approved\nPUT /api/items/:id {status: "rejected"}
InProgress --> Completed : Implementation finished\nPUT /api/items/:id {status: "completed"}
InProgress --> New : Moved back for revision\nPUT /api/items/:id {status: "new"}
New --> InProgress : Start work directly\nPUT /api/items/:id {status: "in-progress"}

Completed --> [*] : Archived
Rejected --> [*] : Archived

note right of New
  **Valid Transitions:**
  - To Review (for evaluation)
  - To In-Progress (start work)
end note

note right of Review
  **Valid Transitions:**
  - To In-Progress (approved)
  - To Rejected (not approved)
  **Cannot skip to Completed**
end note

note right of InProgress
  **Valid Transitions:**
  - To Completed (done)
  - To New (needs revision)
  **Cannot go to Rejected**
end note

note bottom of InProgress
  **@dnd-kit/sortable Integration**
  - Drag events trigger API calls
  - React Query mutation updates cache
  - Optimistic updates for instant feedback
  - Rollback on API error
end note

note bottom of Completed
  **localStorage Persistence**
  - Kanban column positions saved
  - Card collapse state saved
  - Survives page refresh
end note

note as N1
  **Validation Rules**
  - Status must be valid enum
  - Cannot transition directly from New to Completed
  - Cannot transition from Completed back to any state
  - All transitions logged with timestamp
end note

@enduml
